--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,25 +1,33 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
   <head>
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="icon" href="/templates/favicon.ico" type="image/x-icon">
+    <meta charset="utf-8">
+
     {% if title %}
     <title>Hype Control - How hyped is your news?</title>
     {% else %}
     <title>Hype Control</title>
     {% endif %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
+
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
+    <!-- <link rel="icon" href="/templates/favicon.ico" type="image/x-icon">  -->
+    
 
 
     <style>
       body {
+        padding: 0px;
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+        padding-bottom: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+/*        margin: 0 auto;
+        float:none;*/
 
-/*        background: url("https://s3-us-west-2.amazonaws.com/reviewskimmer/popcorn-small.jpg") no-repeat center center fixed;
+        background: url("/static/img/stitched.png") no-repeat center center fixed;
                 -webkit-background-size: cover;
                -moz-background-size: cover;
                -o-background-size: cover;
@@ -56,7 +64,8 @@
 
 
        
-
+    <div class="container"
     {% block content %}{% endblock %}
+  </div>
   </body>
 </html>
