--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,7 @@
 /*        margin: 0 auto;
         float:none;*/
 
-        background: url("/static/img/stitched.png") no-repeat center center fixed;
+        background: url("/static/img/stitched_lens_bright.png") repeat center center fixed;
                 -webkit-background-size: cover;
                -moz-background-size: cover;
                -o-background-size: cover;
