--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
-    <!-- <link rel="icon" href="/templates/favicon.ico" type="image/x-icon">  -->
+    <link rel="icon" href="templates/favicon.ico" type="image/x-icon"> 
     
 
 
@@ -27,7 +27,7 @@
 /*        margin: 0 auto;
         float:none;*/
 
-        background: url("/static/img/stitched_lens_bright.png") repeat center center fixed;
+        background: url("/static/img/stitched_faded.png") repeat center center fixed;
                 -webkit-background-size: cover;
                -moz-background-size: cover;
                -o-background-size: cover;
