--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="icon" href="templates/favicon.ico" type="image/x-icon"> 
+    <link rel="icon shortcut" href="templates/favicon.ico" type="image/x-icon"> 
     
 
 
