fixed finding alternatives bug when 404 error or no string

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="icon shortcut" href="templates/favicon.ico" type="image/x-icon"> 
+    <link rel="icon shortcut" href="static/img/favicon.ico" type="image/x-icon"> 
     
 
 
@@ -54,7 +54,7 @@
             <a class="brand" href="/index">Hype Control</a>
             <ul class="nav">
               <li class="nav"><a href="/index">Home</a></li>
-              <li><a href="#">Slides</a></li>
+              <li><a href="/slides">Slides</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
           </div>
